--- a/package.json
+++ b/package.json
@@ -2,19 +2,24 @@
   "name": "stream-chat-frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "homepage": "https://FRBCAPL.github.io/chat-frontend",
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-pro-sidebar": "^1.1.0",
+    "stream-chat": "^9.1.1",
+    "stream-chat-react": "^13.0.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^4.4.1",
+    "gh-pages": "^6.0.0",
     "vite": "^5.2.0",
-    "web-vitals": "^2.1.4",
-    "gh-pages": "^6.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "vite",
